<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".projects.CreateProjActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_marginTop="112dp"
        app:cardBackgroundColor="@color/bg_dark"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_projCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_newProj"
                android:textAlignment="center"
                android:textColor="@color/txt_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_projName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_projName"
                android:inputType="text"
                android:textColorHint="@color/txt_light"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_projDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/et_projDesc"
                android:inputType="text"
                android:textColorHint="@color/txt_light"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_initDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_initDate"
                    android:textColor="@color/txt_medium"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:text="xx/xx/xxxx"
                    android:textColor="@color/txt_light" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tv_priority"
                android:textColor="@color/txt_medium"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tv_time"
                android:textColor="@color/txt_medium"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_hoursTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_timeHours"
                android:inputType="text"
                android:textColorHint="@color/txt_light"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tv_language"
                    android:textColor="@color/txt_medium"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_projDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/tv_projDetails"
                android:textColor="@color/txt_medium"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_projDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/tv_projDetails"
                android:inputType="text"
                android:textColorHint="@color/txt_light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_saveProj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/btn_dark"
                android:text="@string/btn_saveProj"
                android:textColor="@color/txt_dark"
                android:textStyle="bold"
                app:cornerRadius="16dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>