<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_general"
    tools:context=".login.RegisterActivity">

    <TextView
        android:id="@+id/tv_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="116dp"
        android:text="@string/tv_regist"
        android:textColor="@color/txt_medium"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name1"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="text"
        android:padding="12dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etp_passwd1"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/etp_passwd"
        android:inputType="textPassword"
        android:padding="12dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name1" />

    <EditText
        android:id="@+id/etp_passwd2"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/et_background"
        android:ems="10"
        android:hint="@string/etp_confPasswd"
        android:inputType="textPassword"
        android:padding="12dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name1" />

    <Button
        android:id="@+id/btn_regist1"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="196dp"
        android:backgroundTint="@color/btn_dark"
        android:text="@string/btn_regist"
        android:textColor="@color/txt_dark"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>