<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_general"
    tools:context=".languages.CreateLangActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="260dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="@color/btn_light"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_addLang"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_addLang"
                android:textAlignment="center"
                android:textColor="@color/txt_light"
                android:textSize="24dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_addL"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_background"
                android:ems="10"
                android:hint="@string/et_addingL"
                android:inputType="text"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/txt_light"
                android:textColorHint="@color/txt_light"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btn_create"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/btn_dark"
                android:text="@string/btn_create"
                android:textColor="@color/txt_medium"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
